# 3d-ai-studio

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/: EVALUATION.md  IMPROVEMENTS.md  V2-PLAN.md  V3-COMPETE-WITH-MESHY.md
examples/: cable_clip.py  owl.py  parametric_box.py  phone_stand.py  twist_vase.py
examples/design-plans/: cartoon-owl.design.json
harness/: pyproject.toml  requirements.txt
harness/studio3d/: __init__.py  _blender_render.py  certify.py  cli.py  design_plan.py  exporters.py  generative.py  history.py  kb.py  library.py  muse.py  profiles.py  render.py  sandbox.py  slicer.py  spec.py  step.py  validate.py
harness/studio3d/data/: printers.json  reference_library.json  styles.json
harness/studio3d/data/bbs/: project_template_a1.json
harness/studio3d/data/kb/: csg-errors.md  csg-recipes.md  dfam-rules.md
harness/studio3d/data/schema/: PLAN-TO-DSL.md  design-plan.schema.json
harness/studio3d/dsl/: __init__.py
hooks/: bootstrap.sh  hooks.json
mcp/: server.py
registry/agents/: cad-author.md  design-critic.md  mesh-validator.md  spec-analyst.md
registry/skills/3d-modeling-foundations/: SKILL.md
registry/skills/cad-authoring/: SKILL.md
registry/skills/print-readiness/: SKILL.md
registry/skills/printer-setup/: SKILL.md
skills/grill-me/: SKILL.md
skills/model3d/: SKILL.md
tests/: test_studio3d.py  test_v3.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: sync-output.mjs
web/src/: App.tsx  styles.css  types.ts
(+6 files in other folders)
