[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studio3d"
version = "0.3.0"
description = "Local-first, manifold-by-construction text/image-to-3D-print harness for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "3D-AI-Studio" }]
dependencies = [
    "numpy>=2.0",
    "trimesh>=4.5",
    "manifold3d>=2.5",
    "numpy-stl>=3.1",
    "shapely>=2.0",
    "Pillow>=10.0",
    "matplotlib>=3.8",
    "lxml>=5.0",
    "networkx>=3.0",
    "scipy>=1.11",
    "mapbox-earcut>=1.0",
    "rtree>=1.3",
    "PyYAML>=6.0",
]

[project.scripts]
studio3d = "studio3d.cli:main"

[tool.setuptools.packages.find]
include = ["studio3d*"]
